# Reverie-Companion

./: .gitignore  CHARACTER_CREATOR_CAPABILITY_MATRIX.md  DEVELOPMENT_PLAN.md  README.md  RESEARCH_Milestone3.md  ROLEPLAY_FIRST_CHARACTER_INTEGRITY_POLICY.md  Reverie_Source_of_Truth.md  Vision_Companion_Source_of_Truth.md
OLD-DOCS/: DEVELOPMENT_PLAN.md  RESEARCH_Milestone3.md
backend/: .env.example  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/routers/: images.py  tts.py
backend/services/: emotion_engine.py  image_generation_service.py  image_prompt_engine.py  tts_service.py  voice_manager.py
backend/tests/: test_character_creator_api.py  test_character_creator_runtime.py  test_character_creator_service.py  test_character_runtime.py  test_chat_service.py  test_chat_service_reflection.py  test_config.py  test_emotion_engine.py  test_emotion_inference.py  test_extensions.py  test_growth_orchestrator.py  test_image_api.py  test_image_generation_service.py  test_image_prompt_engine.py  (+17 more)
docs/: COMFYUI_SETUP.md  INSTALLATION_GUIDE.md  M5-P09_TARGET_HARDWARE_SMOKE_CHECKLIST.md  README.md  TECH_STACK_MODELS.md  TTS_SETUP.md  creator-draft-system.md
frontend/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
prompts/: GLOBAL_CODING_PROMPT.md  GROK_CODING_DIRECTOR_WORKFLOW.md
tests/: README.md
(+182 files in other folders)
