[package]
name = "reverie"
version = "0.1.0"
description = "Reverie desktop companion"
authors = ["Reverie Contributors"]
edition = "2021"

[lib]
name = "reverie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
